29. Archives directories moved from inside 'work' to 'empire' to make 
    'work' more manageable (change inside Xrun.tcl) (M. Herman). 
30. Retrieval of EXFOR data from the relational MySQL database - opens
    access to the periodically updated EXFOR library issued by the IAEA-NDS
    on CD-ROMs (V. Zerkin M. Herman).
31. Preequilibrium emission of clusters (Iwamoto-Harada) coded by R. Capote
    and implemented by M. Herman.
32. Xrun.tcl GUI updated: selective delete, access to fission input, and 
    generation of three piece-wise input templates (M. Herman).
33. ZVView updated to the zvv97l.exe version (V. Zerkin).
34. Spectra of recoils calculated using 'ENDF=2 prescrption' instead of a
    rough approximation used before (M. Herman).
35. Pre-fission spectra of particles printed in *.out for ENDF formating
    (M. Herman)
36. Zerkin's GUI allowing for customized EXFOR retrieval can be started 
    from the EMPIRE GUI (M. Herman)
37. Confirmation dialogs added to GUI for all 'delete' buttons(M. Herman)
38. CHECKR added to the chain of utility codes (M. Herman).
39. FIZCON added to the chain of utility codes (M. Herman).
40. STANEF added to the chain of utility codes (M. Herman).

             Changes in version 2.18 with respect to 2.17.1
                      Vienna,   September  2002 
1. Bug fixed in reading levels file when preparing collective levels for
   ECIS (R. Capote).
2. Bug fixed in reading Coulomb parameters of o.m.p. from the RIPL-2 file
   (affects charged particle channels)(R. Capote).
3. Relativistic correction in tl.f removed (gamma=1). It is not needed since
   SCAT2 and ECIS take care of it (R. Capote).
4. Bug in EMPEND, which caused skipping the last but one energy point fixed
   (A. Trkov).
5. EMPEND formats branching ratios in the ENDF file (A. Trkov).
6. xterm closes when calculations are done as it was in versions 2.17 and 
   earlier (p.3.iii below removed) since it was inconvenient for running 