@@ -8,7 +8,7 @@ echo '          EEE    M MM M  PPPP   I  RRRR   EEE    =   H   H '
 echo '          E      M    M  P      I  R  R   E          H   H '
 echo '          EEEEE  M    M  P      I  R   R  EEEEE      H   H '
 echo '                                                           '
-echo '                     V E R S I O N  2.19.beta16            '
+echo '                     V E R S I O N  2.19.beta17            '
 echo '                                                           '
 echo '                       marching towards LODI               '
 echo '                                                           '
