@@ -1,23 +1,21 @@
   0.001              ;INCIDENT ENERGY (IN LAB)
- 58.   28.           ;TARGET  A , Z 
+xxx.   xx.           ;TARGET  A , Z 
   1.    0.           ;PROJECTILE A, Z
 2                    ;NUMBER OF NEUTRONS  TO BE EMITTED
 1                    ;NUMBER OF PROTONS  TO BE EMITTED
 1                    ;NUMBER OF ALPHAS   TO BE EMITTED
 0  0. 0.             ;NUMBER OF L.I. TO BE EMITTED AND ITS A AND Z
 IOUT       1.                                               
-LEVDEN     0                                              
-NEX      150.                                                  
-MSD        0.                                                     
-MSC        0.                                                         
-ENDF       0.                     
+LEVDEN     2.                                              
+NEX       60.                                                   
+MSD        1.                                                     
+MSC        1.                                                         
+ENDF       1.                     
 OMPOT  -2405.       1
 OMPOT  -5405.       2
-DEGAS      0.
-PCROSS     0
-FITLEV     2.
+DEGAS      1.
+GDIVP     10.
 GO                                                  
--1.
 0.002
 0.005
 0.007
